# textual_cnn

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  MultinomialNB.ipynb  NN_Image_CNN_Final.ipynb  README.md  ViT.ipynb  main.py  setup
data/textual_cnn/testing/: test_specimen_easy.txt  test_specimen_easy_2.txt  test_specimen_easy_3.txt  test_specimen_hard.txt  test_specimen_human.txt  test_specimen_moderate.txt
include/tcnn/: ErrorHandling.h  ErrorHandling.hpp  Macros.h  TextUtils.h  TextUtils.hpp
scripts/: download_ai_human_dataset.py
src/: CMakeLists.txt  TextUtils.c  TextUtils.cpp  main.c  main.cpp
test/: .clang-tidy  CMakeLists.txt  ErrorHandling_unittests.cpp  Macros_unittests.cpp  TextUtils_unittests.cpp
